CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(libtoml)

FIND_PROGRAM(RAGEL ragel)
FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(PC_LIBICU icu-uc)

SET(RAGEL_SRCS toml_parse.rl)

SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
INCLUDE_DIRECTORIES(${PC_LIBICU_INCLUDE_DIRS})

FOREACH(RAGEL_SRC ${RAGEL_SRCS})
	STRING(REPLACE ".rl" ".c" C_SRC ${RAGEL_SRC})
	ADD_CUSTOM_COMMAND(OUTPUT ${C_SRC}
		COMMAND ${RAGEL} -o ${C_SRC} ${RAGEL_SRC}
		DEPENDS ${RAGEL} ${RAGEL_SRC}
	)
ENDFOREACH()

SET_SOURCE_FILES_PROPERTIES(toml_parse.c PROPERTIES GENERATED TRUE)

SET(SRCS toml.c toml_parse.c)

ADD_LIBRARY(toml ${SRCS})

LINK_DIRECTORIES(${PC_LIBICU_LIBRARY_DIRS})
ADD_EXECUTABLE(main ${SRCS} main.c)
TARGET_LINK_LIBRARIES(main ${PC_LIBICU_LIBRARIES})
